--- a/PythonProjects/BasicPythonIntroduction.ipynb
+++ b/PythonProjects/BasicPythonIntroduction.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Problem 2\n",
     "\n",
-    "Define a function that accepts a list (called `numbers` below) as input and return a list where each element is multiplied by 10. The grader will supply the argument `numbers` to the function when you run the `grader.score.in__problem2` method below.\n",
+    "Define a function that accepts a list (called `numbers` below) as input and return a list where each element is multiplied by 10. \n",
     "\n",
     "In this case, you need to write a function that will work for arbitrary input.\n",
     "Before submitting your function to the grader, you may want to check that it returns the output that you expect by evaluating code similar to the following:\n",
